<resources>
    <string name="app_name">Projeto MVVM Clean XML</string>

    <string name="field_password">
            Digite sua senha
        </string>

    <string name="field_email">
            Digite seu email
        </string>

    <string name="field_nome">
            Digite seu nome
        </string>
    <string name="field_item">
            Digite o nome da item
        </string>
    <string name="field_confirm_password">
            Confirme sua senha
        </string>

    <string name="welcome">
            Bem-vindo de Volta!
        </string>

    <string name="welcome_cadastro">
            Cadastre-se
        </string>

    <string name="button_login">
            Entrar
        </string>

    <string name="button_cadastrar">
            Cadastrar
        </string>

    <string name="register_link">
        Não tem conta? Cadastre-se aqui!
    </string>

    <string name="content_description_back_button">
        Voltar
    </string>

    <string name="empty_item">
        Nenhum item cadastrado
    </string>

    <string name="txt_logout">
        Sair
    </string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="title_list_item">Listar Itens Cloud</string>
    <string name="title_list_local">Listar Itens Local</string>
    <string name="list_local">Items Locais</string>
    <string name="title_create_item">Criar Item</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_user">Hello: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_item">Nome do item</string>
    <string name="status_ok">✅ Sincronizado</string>
    <string name="status_pending">⏳ Pendente</string>
    <string name="status_cloud">☁️ Cloud</string>


    "

</resources>