<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.cadastro.CadastroActivity">


    <ImageButton
        android:id="@+id/ib_back_cadastro"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/content_description_back_button"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_title_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_cadastro"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_back_cadastro" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nome_cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_cadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nome_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_nome"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de Email (Login) -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_nome_cadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email_cadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_password_cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password_cadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/material_dynamic_neutral30"
        android:padding="12dp"
        android:text="@string/button_cadastrar"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_confirm_password_cadastro"
        tools:ignore="VisualLintButtonSize" />

    <ProgressBar
        android:id="@+id/progress_loading_cadastro"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:indeterminate="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cadastrar" />


</androidx.constraintlayout.widget.ConstraintLayout>